# claw-opt-lab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt  run.sh
cassettes/: email.json  multi-step.json  session-search.json  skill-arxiv.json  web-research.json
cassettes/azure/: ambiguous.json  code-exec.json  cronjob.json  delegate.json  file-explore.json  image-gen.json  memory.json  skills-list.json  todo.json  vision.json  web-extract.json
cassettes/gemma/: ambiguous.json  code-exec.json  cronjob.json  delegate.json  email.json  file-explore.json  image-gen.json  memory.json  multi-step.json  session-search.json  skill-arxiv.json  skills-list.json  todo.json  vision.json  web-extract.json  web-research.json
core/: __init__.py  agent.py  azure.py  backends.py  cassette.py  gemma.py  prompt.py  shim.py  skill_loader.py
tests/: conftest.py  test_agent_loop.py  test_azure_integration.py  test_gemma_adapter.py  test_shim.py  test_skill_loader.py
