[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-opt-lab"
version = "0.1.0"
description = "Minimal agent-loop + tool-call skeleton for LLM optimization experiments (routing, prompt assembly, RAG, cost)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "openai>=1.54.0",
  "python-dotenv>=1.0.0,<2",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-asyncio>=0.24,<2",
]

[tool.setuptools]
py-modules = ["hermes_constants", "main"]

[tool.setuptools.packages.find]
include = ["core", "core.*", "tools", "tools.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires AZURE_OPENAI_API_KEY and network",
]
addopts = "-q"
